--- a/layout_files/templates.kv
+++ b/layout_files/templates.kv
@@ -1,97 +1,97 @@
 
-<ButtonSet>:
+# <ButtonSet>:
 
-    MDBoxLayout:
-        orientation:'vertical'
-        MDRectangleFlatIconButton:
-            # id:button7
-            icon:'numeric-7'
-            text:'Strongly agree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            # background_palette: 'ContrastParentBackground'
-            # text_color:app.theme_cls.accent_color
-            # label_text_color:app.theme_cls.accent_color
-            color_icon_root_button: app.theme_cls.accent_color
-            # size_hint_y:0.8
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(7)
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button6
-            icon:'numeric-6'
-            text:'Agree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            # size_hint_y:0.8
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(6)
-            custom_color: 0, 1, 0, 1
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button5
-            icon:'numeric-5'
-            text:'Somewhat agree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            # size_hint_y:0.8
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(5)
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button4
-            icon:'numeric-4'
-            text:'Neutral'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(4)
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button3
-            icon:'numeric-3'
-            text:'Somewhat disagree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(3)
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button2
-            icon:'numeric-2'
-            text:'Disagree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(2)
-        MDLabel:
-            text:''
-            size_hint_y:0.05
-        MDRectangleFlatIconButton:
-            id:button1
-            icon:'numeric-1'
-            text:'Strongly Disagree'
-            halign:'left'
-            size_hint_x:0.8
-            font_style:'Button'
-            pos_hint:{'center_x':0.5}
-            on_release: root.button_press(1)
+#     MDBoxLayout:
+#         orientation:'vertical'
+#         Button:
+#             # id:button7
+#             icon:'numeric-7'
+#             text:'Strongly agree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             # background_palette: 'ContrastParentBackground'
+#             # text_color:app.theme_cls.accent_color
+#             # label_text_color:app.theme_cls.accent_color
+#             color_icon_root_button: app.theme_cls.accent_color
+#             # size_hint_y:0.8
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(7)
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button6
+#             icon:'numeric-6'
+#             text:'Agree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             # size_hint_y:0.8
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(6)
+#             custom_color: 0, 1, 0, 1
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button5
+#             icon:'numeric-5'
+#             text:'Somewhat agree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             # size_hint_y:0.8
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(5)
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button4
+#             icon:'numeric-4'
+#             text:'Neutral'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(4)
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button3
+#             icon:'numeric-3'
+#             text:'Somewhat disagree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(3)
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button2
+#             icon:'numeric-2'
+#             text:'Disagree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(2)
+#         MDLabel:
+#             text:''
+#             size_hint_y:0.05
+#         Button:
+#             id:button1
+#             icon:'numeric-1'
+#             text:'Strongly Disagree'
+#             halign:'left'
+#             size_hint_x:0.8
+#             font_style:'Button'
+#             pos_hint:{'center_x':0.5}
+#             on_release: root.button_press(1)
 
 # =======================================
 <ItemDrawer>:
@@ -200,12 +200,12 @@
     BoxLayout:
         orientation: 'horizontal'
         size_hint_y:0.3
-        MDRaisedButton:
+        Button:
             text:'                     <                       '
             on_release:self.parent.parent.root.arrow_left()
 
         Widget:
             size_hint_x:0.1
-        MDRaisedButton:
+        Button:
             text:'                     >                       '
             on_release:self.parent.parent.root.arrow_right()
