--- a/layout_files/CognitiveDecline.kv
+++ b/layout_files/CognitiveDecline.kv
@@ -39,7 +39,7 @@
 			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
 
-		MDRaisedButton:
+		Button:
 			text:"Begin"
 			font_style:'Button'
 			# size_hint_x:0.7
@@ -49,11 +49,11 @@
 		BoxLayout:
             orientation: 'horizontal'
             size_hint_y:0.3
-            MDRaisedButton:
+            Button:
                 # size_hint_x:1
                 text:'                     <                       '
                 on_release:root.arrow_left()
-            MDRaisedButton:
+            Button:
                 size_hint_x:1
                 text:'                     >                       '
                 on_release:
@@ -143,11 +143,11 @@
 		BoxLayout:
 			size_hint_y:0.3
 			orientation: 'horizontal'
-			MDRaisedButton:
+			Button:
 				text:'                     <                       '
 				size_hint_x:1
 				on_release:root.arrow_left()
-			MDRaisedButton:
+			Button:
 				text:'                     >                       '
 				size_hint_x:1
 				on_release:root.arrow_right()
@@ -173,7 +173,7 @@
             text: ''
             halign: 'center'
 
-        MDRaisedButton:
+        Button:
             id:restart_button
             text:'Try Again'
             font_style:'Button'
@@ -182,7 +182,7 @@
             on_release:root.reset_quiz()
         Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+        Button:
             id:next_section
             text:'Back'
             font_style:'Button'
@@ -191,7 +191,7 @@
             on_release:root.chevron_left()
         Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+        Button:
             id:next_section
             text:'Next'
             font_style:'Button'
@@ -206,11 +206,11 @@
 
         BoxLayout:
             orientation: 'horizontal'
-            MDRaisedButton:
+            Button:
                 text:'                     <                       '
                 size_hint_x:1
                 on_release:root.arrow_left()
-            MDRaisedButton:
+            Button:
                 text:'                     >                       '
                 size_hint_x:1
                 on_release:root.arrow_right()
