--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -32,7 +32,7 @@
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        MDRaisedButton:
+        Button:
             text:"Begin"
             font_style:'Button'
             # size_hint_x:0.7
@@ -43,11 +43,11 @@
         BoxLayout:
             orientation: 'horizontal'
             size_hint_y:0.3
-            MDRaisedButton:
+            Button:
                 # size_hint_x:1
                 text:'                     <                       '
                 on_release:root.arrow_left()
-            MDRaisedButton:
+            Button:
                 size_hint_x:1
                 text:'                     >                       '
                 on_release: root.arrow_right()
@@ -75,14 +75,14 @@
 
             Widget:
                 size_hint_x:0.2
-            MDRaisedButton:
+            Button:
                 text:'Yes'
                 size_hint_x:1
                 on_release: root.button_press(0)
             Widget:
                 size_hint_x:0.1
 
-            MDRaisedButton:
+            Button:
                 text:'No'
                 size_hint_x:1
                 on_release: root.button_press(1)
@@ -92,11 +92,11 @@
 
         BoxLayout:
             orientation: 'horizontal'
-            MDRaisedButton:
+            Button:
                 text:'                     <                       '
                 size_hint_x:1
                 on_release:root.arrow_left()
-            MDRaisedButton:
+            Button:
                 text:'                     >                       '
                 size_hint_x:1
                 on_release:root.arrow_right()
@@ -123,7 +123,7 @@
             text: ''
             halign: 'center'
 
-        MDRaisedButton:
+        Button:
             id:restart_button
             text:'Try Again'
             font_style:'Button'
@@ -132,7 +132,7 @@
             on_release:root.reset_quiz()
         Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+        Button:
             id:next_section
             text:'Back'
             font_style:'Button'
@@ -141,7 +141,7 @@
             on_release:root.chevron_left()
         Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+        Button:
             id:next_section
             text:'Next'
             font_style:'Button'
@@ -156,11 +156,11 @@
 
         BoxLayout:
             orientation: 'horizontal'
-            MDRaisedButton:
+            Button:
                 text:'                     <                       '
                 size_hint_x:1
                 on_release:root.arrow_left()
-            MDRaisedButton:
+            Button:
                 text:'                     >                       '
                 size_hint_x:1
                 on_release:root.arrow_right()
