--- a/layout_files/Landing.kv
+++ b/layout_files/Landing.kv
@@ -2,80 +2,66 @@
 
 <LandingPage>:
     id:LandingPage
-    nav_drawer:nav_drawer
-    content_drawer:content_drawer
-    my_im:my_im
 
-    MDBoxLayout:
+
+    BoxLayout:
         id:BL
         my_im:my_im
         orientation: 'vertical'
 
-        MDLabel:
+        Widget:
             size_hint_y:0.8
 
         Image:
             id:my_im
-            # on_motion: self.motion(self)
             source: 'pics/logo_minimal.png'
-            # source: 'pics/logo_minimal_white.png'
             opacity:0.85
-            # pos:(dp(0),0)
-            # center_x:200
-            # center_y:333
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
             size:(618,440)
 
         Widget:
             size_hint_y:0.5
 
-
-        MDRaisedButton:
+        Button:
             id:btn1
             text:'Risk Assesment'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.7
+            size_hint:0.7,None  #separate size hints results in clock iteration error
             font_style:'Button'
             on_release:
                 root.manager.current="RiskAssesmentPage"
                 root.manager.transition.direction="left"
-        MDLabel:
-            id:space1
-            text: ''
-            halign: 'center'
+        Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+
+        Button:
             id:btn2
             text:'Educational Resources'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.7
+            size_hint:0.7,None  #separate size hints results in clock iteration error
             # font_size:'20sp'
             # font_name: font_black
             font_style:'Button'
-        MDLabel:
-            id:space2
-            text: ''
-            halign: 'center'
+        Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+
+        Button:
             id:btn3
             text:'Cognitive Rehabilitation'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.7
+            size_hint:0.7,None  #separate size hints results in clock iteration error
             # font_size:'20sp'
             pos_hint:{'center_x':0.5}
             # font_name: font_black
             font_style:'Button'
-        MDLabel:
-            id:space3
-            text: ''
-            halign: 'center'
+        Widget:
             size_hint_y:0.05
-        MDRaisedButton:
+
+        Button:
             id:btn4
             text:'About'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.7
+            size_hint:0.7,None  #separate size hints results in clock iteration error
             # font_size:'20sp'
             pos_hint:{'center_x':0.5}
             # font_name: font_black
@@ -83,11 +69,7 @@
             on_release:
                 root.manager.transition.direction="left"
                 root.manager.current="AboutPage"
-        MDLabel:
-            id:space4
-            text: ''
-            halign: 'center'
-            # size_hint_y:2.25
+        Widget
 
         ScaleLabel:
             id:l2
@@ -100,7 +82,7 @@
             # font_size:'12sp'
             size_hint_y: 0.5
             font_name: '/Users/shivamkundan/Developer/HealthApp/scalasansot-cufonfonts/ScalaSansOT-Regular.otf'
-        # MDLabel:
+        # Label:
         #     size_hint_y:0.01
         #     md_bg_color:1,0,0,0.5
         #     text:''
